@@ -80,9 +80,13 @@
     <li><span class="label label-success">Feature</span> Support display scaling (Windows) (<a
         href="https://trac.cyberduck.io/ticket/8961">#8961</a>)
     </li>
-    <li><span class="label label-success">Feature</span> Authentication using AssumeRole and GetSessionToken with AWS
-        Security Token Service (STS) (S3) (<a
+    <li><span class="label label-success">Feature</span> Transparently support role­based access, including
+        cross­account using AWS Security Token Service (STS), configured in the standard AWS SDK credentials file (S3)
+        (<a
             href="https://trac.cyberduck.io/ticket/8880">#8880</a>)
+    </li>
+    <li><span class="label label-success">Feature</span> Prompt for an MFA token during authentication when specified in
+        the profile from the standard AWS SDK credentials file (S3)
     </li>
     <li><span class="label label-warning">Bugfix</span> Allow configuration of charset in bookmark (SFTP)</li>
     <li><span class="label label-warning">Bugfix</span> Incomplete transfers (<a
